add unit tests for humanReadable()

--- a/pkg/cli/fixtures/project-get-filtered.json
+++ b/pkg/cli/fixtures/project-get-filtered.json
@@ -11,9 +11,9 @@
           {
             "name": "capacity",
             "unit": "B",
-            "quota": 10,
-            "usage": 2,
-            "backend_quota": 100
+            "quota": 16492674416640,
+            "usage": 3004120411540,
+            "backend_quota": 16492674416640
           }
         ],
         "scraped_at": 44
