--- a/pkg/cli/fixtures/project-get-filtered.json
+++ b/pkg/cli/fixtures/project-get-filtered.json
@@ -1,5 +1,9 @@
 {
   "project": {
+    "bursting": {
+      "enabled": true,
+      "multiplier": 0.1
+    },
     "id": "uuid-for-dresden",
     "name": "dresden",
     "parent_id": "uuid-for-germany",
@@ -12,8 +16,9 @@
             "name": "capacity",
             "unit": "B",
             "quota": 16492674416640,
-            "usage": 3004120411540,
-            "backend_quota": 16492674416640
+            "usage": 16492686537852,
+            "backend_quota": 18141941858304,
+            "burst_usage": 12121212
           }
         ],
         "scraped_at": 44
