--- a/pkg/cli/fixtures/project-list-filtered.json
+++ b/pkg/cli/fixtures/project-list-filtered.json
@@ -1,10 +1,6 @@
 {
   "projects": [
     {
-      "bursting": {
-        "enabled": true,
-        "multiplier": 0.1
-      },
       "id": "uuid-for-berlin",
       "name": "berlin",
       "parent_id": "uuid-for-germany",
@@ -16,8 +12,7 @@
             {
               "name": "things",
               "quota": 10,
-              "usage": 11,
-              "burst_usage": 1
+              "usage": 2
             }
           ],
           "scraped_at": 22
@@ -25,10 +20,6 @@
       ]
     },
     {
-      "bursting": {
-        "enabled": true,
-        "multiplier": 0.2
-      },
       "id": "uuid-for-dresden",
       "name": "dresden",
       "parent_id": "uuid-for-berlin",
@@ -40,8 +31,7 @@
             {
               "name": "things",
               "quota": 10,
-              "usage": 11,
-              "burst_usage": 1
+              "usage": 2
             }
           ],
           "scraped_at": 44
