copy json fixtures from Limes
json fixtures have been copied over from Limes as is. Previously the
fixtures differed slightly.

Having the same fixtures will allow easier updates for tests in case
Limes modifies its data structures.

--- a/internal/core/fixtures/project-list-filtered.json
+++ b/internal/core/fixtures/project-list-filtered.json
@@ -12,6 +12,7 @@
             {
               "name": "things",
               "quota": 10,
+              "usable_quota": 10,
               "usage": 2
             }
           ],
@@ -31,7 +32,12 @@
             {
               "name": "things",
               "quota": 10,
-              "usage": 2
+              "usable_quota": 10,
+              "usage": 2,
+              "annotations": {
+                "annotated": true,
+                "text": "this annotation appears on shared things of domain germany and project dresden"
+              }
             }
           ],
           "scraped_at": 44
