--- a/internal/core/fixtures/project-get-dresden.json
+++ b/internal/core/fixtures/project-get-dresden.json
@@ -12,6 +12,7 @@
             "name": "capacity",
             "unit": "B",
             "quota": 10,
+            "usable_quota": 10,
             "usage": 2,
             "backend_quota": 100
           },
@@ -19,12 +20,22 @@
             "name": "external_things",
             "externally_managed": true,
             "quota": 1,
-            "usage": 0
+            "usable_quota": 1,
+            "usage": 0,
+            "annotations": {
+              "annotated": true,
+              "text": "this annotation appears on shared/external_things of project dresden only"
+            }
           },
           {
             "name": "things",
             "quota": 10,
-            "usage": 2
+            "usable_quota": 10,
+            "usage": 2,
+            "annotations": {
+              "annotated": true,
+              "text": "this annotation appears on shared things of domain germany and project dresden"
+            }
           }
         ],
         "scraped_at": 44
@@ -37,12 +48,19 @@
             "name": "capacity",
             "unit": "B",
             "quota": 10,
+            "usable_quota": 10,
             "usage": 2
           },
           {
             "name": "things",
             "quota": 10,
-            "usage": 2
+            "usable_quota": 10,
+            "usage": 2,
+            "scales_with": {
+              "resource_name": "things",
+              "service_type": "shared",
+              "factor": 2
+            }
           }
         ],
         "scraped_at": 33
