--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -11,17 +11,18 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     if: "!contains(github.event.head_commit.message, '[ci skip]')"
-
     steps:
-    - name: Set up Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: 1.14
+      - name: Check out code
+        uses: actions/checkout@v2
 
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@v2
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.14
 
-    - name: Run all the checks
-      run: make check
+      - name: Basic build
+        run: make
+
+      - name: Run tests
+        run: make test
