--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -19,6 +19,11 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v2
+        with:
+          # Only a single commit is fetched by default, for the ref/SHA that
+          # triggered the workflow. We need `fetch-depth: 0` to fetch all
+          # history for all branches and tags.
+          fetch-depth: 0
 
       - name: Set up Go
         uses: actions/setup-go@v2
