--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -26,6 +26,14 @@ jobs:
         with:
           go-version: 1.14
 
+      - name: Cache Go modules
+        uses: actions/cache@v2
+        with:
+          path: ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
+
       - name: Basic build
         run: make
 
