--- a/.github/workflows/license.yml
+++ b/.github/workflows/license.yml
@@ -20,5 +20,13 @@ jobs:
         with:
           go-version: 1.14
 
+      - name: Cache Go modules
+        uses: actions/cache@v2
+        with:
+          path: ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
+
       - name: Run license checker
         run: "go run github.com/google/addlicense --check -- *.go internal/"
