Makefile: add order-only prerequisite for build

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,6 +38,6 @@ jobs:
         uses: goreleaser/goreleaser-action@v2
         with:
           version: latest
-          args: release --rm-dist --release-notes=./build/releaseinfo
+          args: release --rm-dist --release-notes=./build/release-info
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
