--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -38,7 +38,7 @@ jobs:
         run: make
 
       - name: Run tests with coverage
-        run: make test-coverage
+        run: make static-check build/cover.out
 
       - name: Upload coverage report to Coveralls
         run: go run github.com/mattn/goveralls -coverprofile=build/cover.out -service=github
