--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.14
+          go-version: 1.15
 
       - name: Cache Go modules
         uses: actions/cache@v2
@@ -34,11 +34,8 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-go-
 
-      - name: Basic build
-        run: make
-
       - name: Run tests with coverage
-        run: make static-check build/cover.out
+        run: make build/limesctl build/cover.out
 
       - name: Upload coverage report to Coveralls
         run: go run github.com/mattn/goveralls -coverprofile=build/cover.out -service=github
