--- a/internal/core/fixtures/project-get-dresden.json
+++ b/internal/core/fixtures/project-get-dresden.json
@@ -17,6 +17,12 @@
             "backend_quota": 100
           },
           {
+            "name": "capacity_portion",
+            "unit": "B",
+            "contained_in": "capacity_portion",
+            "usage": 1
+          },
+          {
             "name": "external_things",
             "externally_managed": true,
             "quota": 1,
@@ -50,6 +56,12 @@
             "quota": 10,
             "usable_quota": 10,
             "usage": 2
+          },
+          {
+            "name": "capacity_portion",
+            "unit": "B",
+            "contained_in": "capacity_portion",
+            "usage": 1
           },
           {
             "name": "things",
