internal/core: fix contained_in field in fixtures

--- a/internal/core/fixtures/project-get-dresden.json
+++ b/internal/core/fixtures/project-get-dresden.json
@@ -19,7 +19,7 @@
           {
             "name": "capacity_portion",
             "unit": "B",
-            "contained_in": "capacity_portion",
+            "contained_in": "capacity",
             "usage": 1
           },
           {
@@ -60,7 +60,7 @@
           {
             "name": "capacity_portion",
             "unit": "B",
-            "contained_in": "capacity_portion",
+            "contained_in": "capacity",
             "usage": 1
           },
           {
