--- a/internal/core/fixtures/project-list.json
+++ b/internal/core/fixtures/project-list.json
@@ -19,7 +19,7 @@
             {
               "name": "capacity_portion",
               "unit": "B",
-              "contained_in": "capacity_portion",
+              "contained_in": "capacity",
               "usage": 1
             },
             {
@@ -52,7 +52,7 @@
             {
               "name": "capacity_portion",
               "unit": "B",
-              "contained_in": "capacity_portion",
+              "contained_in": "capacity",
               "usage": 1
             },
             {
@@ -91,7 +91,7 @@
             {
               "name": "capacity_portion",
               "unit": "B",
-              "contained_in": "capacity_portion",
+              "contained_in": "capacity",
               "usage": 1
             },
             {
@@ -132,7 +132,7 @@
             {
               "name": "capacity_portion",
               "unit": "B",
-              "contained_in": "capacity_portion",
+              "contained_in": "capacity",
               "usage": 1
             },
             {
