--- a/.github/workflows/spell.yaml
+++ b/.github/workflows/spell.yaml
@@ -15,14 +15,13 @@ jobs:
   misspell:
     name: Check
     runs-on: ubuntu-latest
-    if: '!contains(github.event.head_commit.message, ''[ci skip]'')'
     steps:
     - name: Check out code
       uses: actions/checkout@v2
     - name: Check for spelling errors
       uses: reviewdog/action-misspell@v1
       with:
-        exclude: vendor/**
+        exclude: ./vendor/*
         fail_on_error: true
         github_token: ${{ secrets.GITHUB_TOKEN }}
         locale: US
