--- a/Makefile.maker.yaml
+++ b/Makefile.maker.yaml
@@ -11,16 +11,15 @@ variables:
 
 githubWorkflows:
   global:
-    ignorePaths: [ "**.md" ]
+    ignorePaths: [ "**.md" ] # all Markdown files
   ci:
     enabled: true
     coveralls: true
   license:
     enabled: true
-    patterns: [ "**.go" ]
   spellCheck:
     enabled: true
-    ignorePaths: []
+    ignorePaths: [] # override global setting so that nothing is ignored
 
 verbatim: |
   VERSION     := $(shell git describe --abbrev=7)
