--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,7 +27,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
-        go-version: "1.16"
+        go-version: "1.17"
     - name: Cache Go modules
       uses: actions/cache@v2
       with:
@@ -41,14 +41,13 @@ jobs:
   lint:
     name: Lint
     runs-on: ubuntu-latest
-    if: '!contains(github.event.head_commit.message, ''[ci skip]'')'
     steps:
     - name: Check out code
       uses: actions/checkout@v2
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
-        go-version: "1.16"
+        go-version: "1.17"
     - name: Run golangci-lint
       uses: golangci/golangci-lint-action@v2
       with:
@@ -65,7 +64,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
-        go-version: "1.16"
+        go-version: "1.17"
     - name: Cache Go modules
       uses: actions/cache@v2
       with:
@@ -81,6 +80,6 @@ jobs:
         COVERALLS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         GIT_BRANCH: ${{ github.head_ref }}
       run: |
-        GO111MODULE=off go get -u github.com/mattn/goveralls
+        go install github.com/mattn/goveralls@latest
         goveralls -service=github -coverprofile=build/cover.out
 
