Run go-makefile-maker

--- a/Makefile.maker.yaml
+++ b/Makefile.maker.yaml
@@ -3,9 +3,6 @@ binaries:
     fromPackage: .
     installTo: bin/
 
-staticCheck:
-  golangciLint: true
-
 variables:
   GO_LDFLAGS: "-X main.version=$(VERSION) -X main.commit=$(COMMIT_HASH) -X main.date=$(BUILD_DATE)"
 
@@ -27,4 +24,5 @@ verbatim: |
   BUILD_DATE  := $(shell date -u +"%Y-%m-%dT%H:%M:%S%Z")
 
   build/release-info: CHANGELOG.md | build
-    go run $(GO_BUILDFLAGS) tools/releaseinfo.go $< $(shell git describe --tags --abbrev=0) > $@
+    @if ! hash release-info 2>/dev/null; then printf "\e[1;36m>> Installing release-info...\e[0m\n"; go install github.com/sapcc/go-bits/tools/release-info@latest; fi
+    release-info $< $(shell git describe --tags --abbrev=0) > $@
