--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -48,16 +48,11 @@ jobs:
       uses: actions/setup-go@v2
       with:
         go-version: "1.17"
-    - name: Cache Go modules
-      uses: actions/cache@v2
+    - name: Run golangci-lint
+      uses: golangci/golangci-lint-action@v2
       with:
-        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-        path: |
-          ~/go/pkg/mod
-          ~/.cache/go-build
-        restore-keys: ${{ runner.os }}-go-
-    - name: Run gofmt, go vet, staticcheck
-      run: make static-check
+        skip-go-installation: true
+        version: latest
   test:
     name: Test
     needs:
