Makefile.maker.yaml: update comment

--- a/Makefile.maker.yaml
+++ b/Makefile.maker.yaml
@@ -7,8 +7,8 @@ variables:
   GO_LDFLAGS: "-X main.version=$(VERSION) -X main.commit=$(COMMIT_HASH) -X main.date=$(BUILD_DATE)"
 
 golangciLint:
-  # This is default behavior, we define this option explicitly for documentation purposes.
-  # limesctl defines its own custom config for golangci-lint.
+  # We define our own custom config. This is default behavior but we define this option
+  # explicitly for documentation purposes.
   createConfig: false
 
 spellCheck:
