--- a/Makefile.maker.yaml
+++ b/Makefile.maker.yaml
@@ -29,7 +29,7 @@ githubWorkflow:
     ignorePaths: [] # override global setting so that nothing is ignored
 
 verbatim: |
-  VERSION     := $(shell git describe --abbrev=7)
+  VERSION     := $(shell git describe --tags --abbrev=7)
   COMMIT_HASH := $(shell git rev-parse --verify HEAD)
   BUILD_DATE  := $(shell date -u +"%Y-%m-%dT%H:%M:%S%Z")
 
