Run go-makefile-maker

--- a/Makefile.maker.yaml
+++ b/Makefile.maker.yaml
@@ -16,17 +16,22 @@ spellCheck:
 
 githubWorkflow:
   global:
+    assignees:
+      - SuperSandro2000
     ignorePaths: [ "**.md" ] # all Markdown files
   ci:
     enabled: true
     coveralls: true
-  codeQL:
-    enabled: true
   license:
+    enabled: true
+  securityChecks:
     enabled: true
   spellCheck:
     enabled: true
     ignorePaths: [] # override global setting so that nothing is ignored
+
+renovate:
+  enabled: true
 
 verbatim: |
   VERSION     := $(shell git describe --tags --abbrev=7)
