Run go-makefile-maker

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -18,8 +18,10 @@
   ],
   "packageRules": [
     {
-      "matchDepTypes": ["action"],
-      "enabled": false
+      "enabled": false,
+      "matchDepTypes": [
+        "action"
+      ]
     }
   ],
   "prHourlyLimit": 0
