--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,6 +22,27 @@ jobs:
     name: Build
     needs:
       - lint
+    runs-on: ${{ matrix.os }}
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v3
+      - name: Set up Go
+        uses: actions/setup-go@v3
+        with:
+          cache: true
+          go-version: "1.17"
+      - name: Make build
+        run: make build-all
+    strategy:
+      matrix:
+        os:
+          - macos-latest
+          - ubuntu-latest
+          - windows-latest
+  finish:
+    name: Finish
+    needs:
+      - test
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
@@ -30,16 +51,13 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: "1.17"
-      - name: Cache Go modules
-        uses: actions/cache@v3
-        with:
-          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-          path: |
-            ~/go/pkg/mod
-            ~/.cache/go-build
-          restore-keys: ${{ runner.os }}-go-
-      - name: Make build
-        run: make build-all
+      - name: Coveralls post build webhook
+        env:
+          COVERALLS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GIT_BRANCH: ${{ github.head_ref }}
+        run: |
+          go install github.com/mattn/goveralls@latest
+          goveralls -parallel-finish
   lint:
     name: Lint
     runs-on: ubuntu-latest
@@ -58,22 +76,15 @@ jobs:
     name: Test
     needs:
       - build
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Check out code
         uses: actions/checkout@v3
       - name: Set up Go
         uses: actions/setup-go@v3
         with:
+          cache: true
           go-version: "1.17"
-      - name: Cache Go modules
-        uses: actions/cache@v3
-        with:
-          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-          path: |
-            ~/go/pkg/mod
-            ~/.cache/go-build
-          restore-keys: ${{ runner.os }}-go-
       - name: Run tests and generate coverage report
         run: make build/cover.out
       - name: Upload coverage report to Coveralls
@@ -82,4 +93,10 @@ jobs:
           GIT_BRANCH: ${{ github.head_ref }}
         run: |
           go install github.com/mattn/goveralls@latest
-          goveralls -service=github -coverprofile=build/cover.out
+          goveralls -service=github -coverprofile=build/cover.out -parallel -flagname="Unit-${{ matrix.os }}"
+    strategy:
+      matrix:
+        os:
+          - macos-latest
+          - ubuntu-latest
+          - windows-latest
