upgrade to Go 1.18

--- a/Makefile.maker.yaml
+++ b/Makefile.maker.yaml
@@ -18,6 +18,7 @@ githubWorkflow:
   global:
     assignees:
       - talal
+      - majewsky
       - SuperSandro2000
     ignorePaths: [ "**.md" ] # all Markdown files
   ci:
