--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -13,7 +13,7 @@ builds:
       - amd64
       - arm64
     ldflags:
-      - -s -w -X main.version={{.Version}} -X main.commit={{.FullCommit}} -X main.date={{.CommitDate}}
+      - -s -w -X github.com/sapcc/go-api-declarations/bininfo.binName=limesctl -X github.com/sapcc/go-api-declarations/bininfo.version={{ .Version }} -X github.com/sapcc/go-api-declarations/bininfo.commit={{ .FullCommit  }} -X github.com/sapcc/go-api-declarations/bininfo.buildDate={{ .CommitDate }}
     mod_timestamp: "{{ .CommitTimestamp }}" # Ensure builds are reproducible
 
 snapshot:
