--- a/Makefile.maker.yaml
+++ b/Makefile.maker.yaml
@@ -4,9 +4,7 @@ binaries:
     installTo: bin/
 
 golangciLint:
-  # We define our own custom config. This is default behavior but we define this option
-  # explicitly for documentation purposes.
-  createConfig: false
+  createConfig: true
 
 githubWorkflow:
   global:
