--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -45,7 +45,7 @@ archives:
       - completions/*
 
 brews:
-  - tap:
+  - repository:
       owner: sapcc
       name: limesctl
     folder: HomebrewFormula
