GoReleaser: use custom config

--- a/Makefile.maker.yaml
+++ b/Makefile.maker.yaml
@@ -15,8 +15,10 @@ golang:
 golangciLint:
   createConfig: true
 
-goreleaser:
-  enabled: true
+goReleaser:
+  # NOTE: this is default behavior but we define this option explicitly for documentation purposes.
+  # limesctl uses a custom config file which includes Homebrew tap definition.
+  createConfig: false
 
 githubWorkflow:
   ci:
