GoReleaser: fix completions generation
For some reason, running the `go run main.go completion...` directly does not
work but running it with `sh -c` works.

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -3,9 +3,7 @@ before:
     - go mod tidy
     - rm -rf completions
     - mkdir completions
-    - go run main.go completion bash >"completions/limesctl.bash"
-    - go run main.go completion fish >"completions/limesctl.fish"
-    - go run main.go completion zsh >"completions/limesctl.zsh"
+    - sh -c "for sh in bash zsh fish; do go run main.go completion "$sh" >"completions/limesctl.$sh"; done"
 
 builds:
   - env:
