--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,3 +1,4 @@
+version: 2
 before:
   hooks:
     - rm -rf completions
@@ -45,7 +46,7 @@ brews:
   - repository:
       owner: sapcc
       name: limesctl
-    folder: HomebrewFormula
+    directory: HomebrewFormula
     homepage: https://github.com/sapcc/limesctl
     description: Command-line interface for Limes
     license: Apache-2.0
