--- a/Makefile.maker.yaml
+++ b/Makefile.maker.yaml
@@ -36,3 +36,11 @@ renovate:
   assignees:
     - majewsky
     - SuperSandro2000
+
+reuse:
+  annotations:
+    - paths:
+      - internal/core/fixtures/*.csv
+      - internal/core/fixtures/*.json
+      SPDX-FileCopyrightText: SAP SE or an SAP affiliate company
+      SPDX-License-Identifier: Apache-2.0
