--- a/REUSE.toml
+++ b/REUSE.toml
@@ -21,6 +21,14 @@ SPDX-License-Identifier = "Apache-2.0"
 
 [[annotations]]
 path = [
+  "internal/core/fixtures/*.csv",
+  "internal/core/fixtures/*.json",
+]
+SPDX-FileCopyrightText = "SAP SE or an SAP affiliate company"
+SPDX-License-Identifier = "Apache-2.0"
+
+[[annotations]]
+path = [
   "vendor/github.com/google/go-cmp/**",
 ]
 precedence = "aggregate"
