--- a/Makefile.maker.yaml
+++ b/Makefile.maker.yaml
@@ -9,6 +9,7 @@ binaries:
     installTo: bin/
 
 golang:
+  autoupdateableDeps: ^github.com/(?:sapcc|sap-cloud-infrastructure)/
   enableVendoring: true
   setGoModVersion: true
 
