--- a/.github/workflows/goreleaser.yaml
+++ b/.github/workflows/goreleaser.yaml
@@ -28,6 +28,8 @@ jobs:
         with:
           check-latest: true
           go-version: 1.24.6
+      - name: Inbstall syft
+        uses: anchore/sbom-action/download-syft@v0.20.5
       - name: Generate release info
         run: |
           go install github.com/sapcc/go-bits/tools/release-info@latest
