--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -29,6 +29,10 @@ builds:
     # Set the modified timestamp on the output binary to ensure that builds are reproducible.
     mod_timestamp: "{{ .CommitTimestamp }}"
 
+sboms:
+  - id: archive
+    artifacts: archive
+
 snapshot:
   name_template: "{{ .Tag }}-next"
 
