Apply suggestions from code review
Co-authored-by: Stefan Majewsky <stefan.majewsky@sap.com>

--- a/Makefile.maker.yaml
+++ b/Makefile.maker.yaml
@@ -35,7 +35,7 @@ githubWorkflow:
 
 nix:
   extraPackages:
-    - syft
+    - syft # for SBOM generation (see .goreleaser.yaml)
 
 renovate:
   enabled: true
