--- a/.github/workflows/goreleaser.yaml
+++ b/.github/workflows/goreleaser.yaml
@@ -28,7 +28,7 @@ jobs:
         with:
           check-latest: true
           go-version: 1.24.6
-      - name: Inbstall syft
+      - name: Install syft
         uses: anchore/sbom-action/download-syft@v0.20.5
       - name: Generate release info
         run: |
